// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id          Int        @id @unique
  qrImagePath String?    @unique
  department  String?
  name        String
  status      UserStatus @default(enrolled)
  password    String
  createdAt   DateTime   @default(now())
  updatedAt   DateTime   @updatedAt
  items       Asset[]
}

enum UserStatus {
  enrolled
  retired
  suspended
}

model Product {
  id          String   @id @unique
  name        String
  maker       String?
  imagePath   String?
  model       String?
  note        String?
  category    String
  accessories String[]
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  Asset       Asset[]
}

enum ProdutCategory {
  laptop
  mobilePhone
  mobileRouter
}

model Asset {
  id          String      @id @unique
  qrImagePath String?
  productId   String
  product     Product     @relation(fields: [productId], references: [id])
  simId       String?
  note        String?
  status      AssetStatus @default(inActive)
  buyDate     DateTime
  userId      Int?
  user        User?       @relation(fields: [userId], references: [id])
}

enum AssetStatus {
  active
  inActive
  broken
  maintenance
}
